agile retro updates

--- a/0002-agile-revisited/v.html
+++ b/0002-agile-revisited/v.html
@@ -113,10 +113,10 @@
             <div style="display: grid; text-align: left; width: 80%;">
               <h4 style="margin: 60px auto 0;">It doesn't say...</h4>
               <ul style="font-size: 22pt; list-style-type: none;">
-                <li class="animate__fadeInDown" style="margin-top: 30px;">Sacrifice quality in the pursuit of speed.</li>
-                <li class="animate__fadeInDown" style="margin-top: 30px;">Just ship.</li>
-                <li class="animate__fadeInDown" style="margin-top: 30px;">Don't plan.</li>
-                <li class="animate__fadeInDown" style="margin-top: 30px;">Quality is a magic byproduct of Agile.</li>
+                <li class="" style="margin-top: 30px;">Sacrifice quality in the pursuit of speed.</li>
+                <li class="" style="margin-top: 30px;">Just ship.</li>
+                <li class="" style="margin-top: 30px;">Don't plan.</li>
+                <li class="" style="margin-top: 30px;">Quality is a magic byproduct of Agile.</li>
               </ul>
             </div>
           </section>
@@ -313,14 +313,14 @@
             <div style="display: grid; text-align: left; width: 80%;">
               <h4 style="margin: 60px auto 0;">Breaking Down Stories</h4>
               <ul style="font-size: 22pt; list-style-type: none;">
-                <li class="animate__fadeInDown" style="margin-top: 10px;">You <em>can</em> break stories down into smaller stories...</li>
-                <li class="animate__fadeInDown" style="margin-top: 10px;">But Stories and Tasks are different.
+                <li class="" style="margin-top: 10px;">You <em>can</em> break stories down into smaller stories...</li>
+                <li class="" style="margin-top: 10px;">But Stories and Tasks are different.
                   <ul>
                     <li>Stories are for customers and describe high-level functionality</li>
                     <li>Tasks are for developers</li>
                   </ul>
                 </li>
-                <li class="animate__fadeInDown" style="margin-top: 10px;">
+                <li class="" style="margin-top: 10px;">
                 </li>
               </ul>
             </div>
@@ -378,10 +378,10 @@
                     </div>
                   </div>
                   <div>
-                    &#x1F468; <sup style="font-size: 50pt;">00</sup>/<sub style="font-size: 40pt;">12</sub>
+                    &#128104;&#8205;&#128187; <sup style="font-size: 50pt;">00</sup>/<sub style="font-size: 40pt;">12</sub>
                   </div>
                   <div>
-                    &#x1F468; <sup style="font-size: 50pt;">00</sup>/<sub style="font-size: 40pt;">15</sub>
+                    &#128104;&#8205;&#128187; <sup style="font-size: 50pt;">00</sup>/<sub style="font-size: 40pt;">15</sub>
                   </div>
                 </div>
               </div>
@@ -420,7 +420,7 @@
                     <div style="display: inline-block; vertical-align: middle; background-color: hsl(0, 40%, 60%); width: 75px; height: 75px; aspect-ratio: 1;">&nbsp;</div>
                   </div>
                   <div>
-                    &#x1F468; <sup style="font-size: 50pt;">00</sup>/<sub style="font-size: 40pt;">15</sub>
+                    &#128104;&#8205;&#128187; <sup style="font-size: 50pt;">00</sup>/<sub style="font-size: 40pt;">15</sub>
                   </div>
                 </div>
               </div>
@@ -459,7 +459,7 @@
                     <div style="display: inline-block; vertical-align: middle; background-color: hsl(0, 40%, 60%); width: 75px; height: 75px; aspect-ratio: 1;">&nbsp;</div>
                   </div>
                   <div>
-                    &#x1F468; <sup style="font-size: 50pt;">00</sup>/<sub style="font-size: 40pt;">15</sub>
+                    &#128104;&#8205;&#128187; <sup style="font-size: 50pt;">00</sup>/<sub style="font-size: 40pt;">15</sub>
                   </div>
                 </div>
               </div>
@@ -494,12 +494,12 @@
                     </div>
                   </div>
                   <div>
-                    &#x1F468; <sup style="font-size: 50pt;">11</sup>/<sub style="font-size: 40pt;">12</sub>
+                    &#128104;&#8205;&#128187; <sup style="font-size: 50pt;">11</sup>/<sub style="font-size: 40pt;">12</sub>
                     <div style="display: inline-block; vertical-align: middle; background-color: hsl(0, 40%, 60%); width: 75px; height: 75px; aspect-ratio: 1;">&nbsp;</div>
                     <div style="display: inline-block; vertical-align: middle; background-color: hsl(190, 40%, 50%); width: 75px; height: 75px; aspect-ratio: 1;">&nbsp;</div>
                   </div>
                   <div>
-                    &#x1F468; <sup style="font-size: 50pt;">13</sup>/<sub style="font-size: 40pt;">15</sub>
+                    &#128104;&#8205;&#128187; <sup style="font-size: 50pt;">13</sup>/<sub style="font-size: 40pt;">15</sub>
                     <div style="display: inline-block; vertical-align: middle; background-color: hsl(0, 40%, 60%); width: 75px; height: 75px; aspect-ratio: 1;">&nbsp;</div>
                     <div style="display: inline-block; vertical-align: middle; background-color: hsl(190, 40%, 50%); width: 75px; height: 75px; aspect-ratio: 1;">&nbsp;</div>
                     <div style="display: inline-block; vertical-align: middle; background-color: hsl(190, 40%, 50%); width: 75px; height: 75px; aspect-ratio: 1;">&nbsp;</div>
@@ -518,10 +518,10 @@
             <div style="display: grid; text-align: left; width: 80%;">
               <h4 style="margin: 60px auto 0;">Halfway Point</h4>
               <ul style="font-size: 26pt; list-style-type: none;">
-                <li class="animate__fadeInDown">Verify that 1/2 of the Story Points are complete (not tasks!)</li>
-                <li class="animate__fadeInDown">Otherwise, make adjustments</li>
-                <li class="animate__fadeInDown">&nbsp;</li>
-                <li class="animate__fadeInDown">
+                <li class="">Verify that 1/2 of the Story Points are complete (not tasks!)</li>
+                <li class="">Otherwise, make adjustments</li>
+                <li class="">&nbsp;</li>
+                <li class="">
                   Beware of the <u>Nightmare Scenario</u>
                   <blockquote>The iteration ends and 90% of Tasks are finished, but 0 Stories were completed.</blockquote>
                 </li>
@@ -538,10 +538,10 @@
             <div style="display: grid; text-align: left; width: 80%;">
               <h4 style="margin: 60px auto 0;">After Iteration</h4>
               <ul style="font-size: 26pt; list-style-type: none;">
-                <li class="animate__fadeInDown">Calculate velocity from completed <u>Stories</u></li>
-                <li class="animate__fadeInDown">Developers calculate their budget from completed <u>Tasks</u></li>
-                <li class="animate__fadeInDown">Present a demo to the customer</li>
-                <li class="animate__fadeInDown">Receive feedback in the form of more User Stories</li>
+                <li class="">Calculate velocity from completed <u>Stories</u></li>
+                <li class="">Developers calculate their budget from completed <u>Tasks</u></li>
+                <li class="">Present a demo to the customer</li>
+                <li class="">Receive feedback in the form of more User Stories</li>
               </ul>
             </div>
           </section>
@@ -555,28 +555,8 @@
             <div style="display: grid; text-align: left; width: 80%;">
               <h4 style="margin: 60px auto 0;">The Difference</h4>
               <ul style="font-size: 26pt; list-style-type: none;">
-                <li>No Tasks, Task Points, Dev Budgets
-                  <ul>
-                    <li>Stories are used as Tasks</li>
-                    <li>Stories are broken into Tasks but called Stories <em>and</em> they're split across iterations</li>
-                  </ul>
-                </li>
-                <li>Too many stories are put on the iteration, stories aren't kept whole
-                  <ul>
-                    <li>Stories are broken into Tasks but called Stories <em>and</em> they're split across iterations</li>
-                    <li>App is always in an unfinished state</li>
-                  </ul>
-                </li>
-                <li>Devs don't sign-up for anything before the iteration starts
-                  <ul>
-                    <li>The iteration is a free-for-all</li>
-                  </ul>
-                </li>
-                <li>Devs pick-up whole stories during the iteration
-                  <ul>
-                    <li>Every dev is in their own corner, there is no teamwork</li>
-                  </ul>
-                </li>
+                <li>No Tasks, Task Points, Dev Budgets</li>
+                <li>Devs don't sign-up for anything before the iteration starts </li>
               </ul>
             </div>
           </section>
@@ -587,25 +567,46 @@
 
           <section class="slide" data-appearevent="slidechanged" data-autoappear="true" data-background-image="./images/anime-bg.png" data-background-opacity="0.02" data-background-size="900px" style="display: block;">
             <div style="display: grid; text-align: left; width: 80%;">
-              <h4 style="margin: 60px auto 0;">The Implications</h4>
-              <ul style="font-size: 26pt; list-style-type: none;">
-                <li class="animate__fadeInDown">Fewer stories, same work done</li>
-                <li class="animate__fadeInDown">App is always whole and stable</li>
+              <h4 style="margin: 60px auto 0;">No Tasks</h4>
+              <ul style="font-size: 22pt; list-style-type: none;">
+                <li class="">Tasks are created as &quot;smaller stories&quot;</li>
+                <li class="">Those stories are then distributed across iterations</li>
+                <li class="">Too many &quot;stories&quot; are added to an iteration</li>
+                <li class="">The app is always in an unfinished state</li>
+                <li class="">Partial stories are being delivered</li>
+                <li class="">No separate levels of abstraction</li>
+                <li class="">Customers are being exposed to technical details</li>
+                <li class="">A single dev is responsible for the whole story, instead of just a task.  No teamwork.
+                  <ul>
+                    <li>No shared goals or objectives</li>
+                    <li>Conway's Law - every dev is isolated, to try to cover more ground, but negatively affects the cohesion of your app.  because no one is on the same page</li>
+                  </ul>
+                </li>
               </ul>
             </div>
           </section>
+
+
 
 
 
 
           <section class="slide" data-appearevent="slidechanged" data-autoappear="true" data-background-image="./images/anime-bg.png" data-background-opacity="0.02" data-background-size="900px" style="display: block;">
             <div style="display: grid; text-align: left; width: 80%;">
-              <h4 style="margin: 60px auto 0;">The Difference Over Time</h4>
-              <ul style="font-size: 26pt; list-style-type: none;">
-                <li class="animate__fadeInDown">...</li>
+              <h4 style="margin: 60px auto 0;">Not Assigning Tasks Before Iteration</h4>
+              <ul style="font-size: 22pt; list-style-type: none;">
+                <li class="">The iteration is a free-for-all</li>
+                <li class="">All prep is thrown out the window - unable to plan ahead because you don't know who is doing what</li>
+                <li class="">Knowing who is doing what, lets you coordinate and collaborate; increases communication</li>
+                <li class="">Knowing what you're responsible
+                  for over the iteration, lets you give more realistic answers
+                  when asked about you confidence in completion by the end of
+                the sprint</li>
+                <li class="">It also lets you think ahead while you're working on something else.  So when you start you have a plan of attack.</li>
               </ul>
             </div>
           </section>
+
 
 
 
