--- a/0002-agile-revisited/v.html
+++ b/0002-agile-revisited/v.html
@@ -11,10 +11,10 @@
     <style>
 
 .demo_container {
-  border: solid 1px rgba(255, 255, 255, 0.7);
+  border: solid 2px hsl(50, 10%, 67%);
   width: 100%;
   flex-direction: column;
-  background-color: #0c0c0c;
+  background-color: hsl(227, 43%, 4%);
   align-items: flex-start;
   padding: 10px;
   margin-top: 30px;
